src/test/resources/public/input/typechecking/pass/asdf.jova
class A{
public int a(){



bool b1;
bool b2;
int i1;

i1 = (true) ? 1 : 0;

b1 = true;

b2 = true + b1 - false;


if(!i1 + b1){

}

return 0;
}
}