src/test/resources/public/input/typechecking/fail/main_structure/fail03.jova
class Test{

}

class Main {

  public int main() {
    return 0;
  }

  pubic int another_fun(){
	return 1;
  }
}